<resources>
    <string name="app_name">Image MetaData Editor</string>

    <string name="small_radio_label">Small</string>
    <string name="normal_radio_label">Regular</string>
    <string name="large_radio_label">Large</string>

    <string name="name_label">Name: </string>
    <string name="date_label">Date: </string>
    <string name="URL_label">Source URL: </string>
    <string name="keywords_label">Keywords: </string>
    <string name="email_label">Contact Email Address: </string>
    <string name="rating_label">Rating: </string>
    <string name="shared_label">Shared</string>
    <string name="private_label">Private</string>

</resources>
